# Qmagus

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250621_000001_create_user_table.py  20250621_000002_create_conversation_tables.py  20250621_000003_add_indexes.py  20260625_000004_add_constraints_and_rate_limit_buckets.py  20260627_000005_add_structured_scenario_fields.py
backend/app/: config.py  database.py  logging_config.py  main.py  rate_limit.py
backend/app/auth/: backend.py  db.py  deps.py  manager.py  users.py
backend/app/handlers/: errors.py
backend/app/middleware/: login_rate_limit.py  request_id.py
backend/app/models/: user.py
backend/app/prompts/: conversation.txt  feedback.txt
backend/app/repositories/: messages.py  saved_items.py  sessions.py
backend/app/routers/: feedback.py  messages.py  saved_items.py  sessions.py  transcribe.py  tts.py
backend/app/schemas/: feedback.py  messages.py  saved_items.py  sessions.py  transcribe.py  tts.py
backend/app/services/: feedback_service.py  openai_client.py  openai_errors.py  openai_service.py  scenario_service.py  transcribe_service.py  tts_service.py
docs/: ENV_TEMPLATE.md  IMPLEMENTATION.md  ONBOARDING_READ_ORDER.md  PREDEPLOY_REFACTOR_GUIDELINES_20260625.md  REFACTOR_20260623.md  SETUP.md  SPEC.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useSpeechRecognition.ts  useSpeechSynthesis.ts  (+1 more)
(+41 files in other folders)
