[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "english-project-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "openai>=1.55.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "greenlet>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]